--- a/react-app-students-vite/src/components/Navbar/Navbar.css
+++ b/react-app-students-vite/src/components/Navbar/Navbar.css
@@ -1,25 +1,30 @@
 .Navbar {
     border-bottom: 1px solid;
-    padding: 20px;
+    background-color: rgb(219, 233, 255);
+    padding: 5px;
+}
+
+.Navbar .buttons,
+.Navbar nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: rgb(226, 236, 241);
-    font-family: sans-serif;
 }
 
-h1{
-    color: #14428b;
-    font-size: 2rem;
-    text-transform: uppercase;
+.Navbar nav {
+    width: 100%;
 }
 
+.Navbar .navicon {
+    width: 40px
+}
 
 .Navbar .logo {
-    width: 80px;
+    position: absolute;
+    left: 50%;
+    margin-left: -30px;
+    width: 60px;
 }
 
-
-.Navbar .menu{
-    width: 40px;
+.Navbar h1 {
+    margin-left: 20px;
 }
